--- a/md/2011-En.md
+++ b/md/2011-En.md
@@ -32,26 +32,26 @@ that the “voluntary ecosystem” envisioned by Mr. Schmidt would still leave m
 same way that drivers must be licensed to drive on public roads.
  
  
-1．   A.swept            B.skipped          C.walked           D.ridden
-2．   A.for              B.within           C.while            D.though
-3．   A.careless         B.lawless          C.pointless        D.helpless
-4．   A.reason           B.reminder         C.compromise       D.proposal
-5．   A.information      B.interference     C.entertainment    D.equivalent
-6．   A.by               B.into             C.from             D.over
-7．   A.linked           B.directed         C.chained          D.compared
-8．   A.dismiss          B.discover         C.create           D.improve
-9．   A.recall           B.suggest          C.select           D.realize
-10．  A.released         B.issued           C.distributed      D.delivered
-11．  A.carry on         B.linger on        C.set in           D.log in
-12．  A.In vain          B.In effect        C.In return        D.In contrast
-13．  A.trusted          B.modernized       C.thriving         D.competing
-14．  A.caution          B.delight          C.confidence       D.patience
-15．  A.on               B.after            C.beyond           D.across
-16．  A.divided          B.disappointed     C.protected        D.united
-17．  A.frequently       B.incidentally     C.occasionally     D.eventually
-18．  A.skepticism       B.tolerance        C.indifference     D.enthusiasm
-19．  A.manageable       B.defendable       C.vulnerable       D.invisible
-20．  A.invited          B.appointed        C.allowed          D.forced
+1.   A.swept            B.skipped          C.walked           D.ridden
+2.   A.for              B.within           C.while            D.though
+3.   A.careless         B.lawless          C.pointless        D.helpless
+4.   A.reason           B.reminder         C.compromise       D.proposal
+5.   A.information      B.interference     C.entertainment    D.equivalent
+6.   A.by               B.into             C.from             D.over
+7.   A.linked           B.directed         C.chained          D.compared
+8.   A.dismiss          B.discover         C.create           D.improve
+9.   A.recall           B.suggest          C.select           D.realize
+10.  A.released         B.issued           C.distributed      D.delivered
+11.  A.carry on         B.linger on        C.set in           D.log in
+12.  A.In vain          B.In effect        C.In return        D.In contrast
+13.  A.trusted          B.modernized       C.thriving         D.competing
+14.  A.caution          B.delight          C.confidence       D.patience
+15.  A.on               B.after            C.beyond           D.across
+16.  A.divided          B.disappointed     C.protected        D.united
+17.  A.frequently       B.incidentally     C.occasionally     D.eventually
+18.  A.skepticism       B.tolerance        C.indifference     D.enthusiasm
+19.  A.manageable       B.defendable       C.vulnerable       D.invisible
+20.  A.invited          B.appointed        C.allowed          D.forced
                    Section II    Reading   Comprehension
  Part A
  Directions:
@@ -315,9 +315,9 @@ especially the call to use some of the tough tactics that have been deployed aga
 the last decade.
                               A. “ fat taxes” should be imposed on fast-food producers such as
                               McDonald’s.
-41 Andrew Lansley held that   B. the government should ban  fast-food outlets in the
+41. Andrew Lansley held that   B. the government should ban  fast-food outlets in the
                               neighborhood of schools.
-42.Terence Stephenson agreed that C. “lecturing” was an effective way to improve school lunches in
+42. Terence Stephenson agreed that C. “lecturing” was an effective way to improve school lunches in
                               England.
 43. Jamie Oliver seemed to believe D. cigarette-style warnings should be introduced to children
 1
