--- a/md/2012-En.md
+++ b/md/2012-En.md
@@ -24,26 +24,26 @@ Both men  17  the dirt and exhaustion of war, the 18 of civilization that the so
 with each other and the civilians: coffee, tobacco, whiskey, shelter, sleep. 19 Egypt, France,
 and a dozen more countries, G. I. Joe was any American soldier, 20 the most important
 person in their lives.
-  1．   A. performed      B. served        C. rebelled       D. betrayed
-  2．   A. actual         B. common        C. special        D. normal
-  3．   A. bore           B. eased         C. removed        D. loaded
-  4．   A. necessities    B. facilities    C. commodities    D. properties
-  5．   A. and            B. nor           C. but            D. hence
-  6．   A. for            B. into          C. from           D. against
-  7．   A. meaning        B. implying      C. symbolizing    D. claiming
-  8．   A. handed out     B. turned over   C. brought back   D. passed down
-  9．   A. pushed         B. got           C. made           D. managed
-  10．  A. ever           B. never         C. either         D. neither
-  11．  A. disguised      B. disturbed     C. disputed       D. distinguished
-  12．  A. company        B. collection    C. community      D. colony
+  1.   A. performed      B. served        C. rebelled       D. betrayed
+  2.   A. actual         B. common        C. special        D. normal
+  3.   A. bore           B. eased         C. removed        D. loaded
+  4.   A. necessities    B. facilities    C. commodities    D. properties
+  5.   A. and            B. nor           C. but            D. hence
+  6.   A. for            B. into          C. from           D. against
+  7.   A. meaning        B. implying      C. symbolizing    D. claiming
+  8.   A. handed out     B. turned over   C. brought back   D. passed down
+  9.   A. pushed         B. got           C. made           D. managed
+  10.  A. ever           B. never         C. either         D. neither
+  11.  A. disguised      B. disturbed     C. disputed       D. distinguished
+  12.  A. company        B. collection    C. community      D. colony
   13.  A. employed       B. appointed     C. interviewed    D. questioned
-  14．  A. ethical        B.military       C. political      D. human
-  15．  A. ruined         B. commuted      C.patrolled       D. gained
-  16．  A. paralleled     B. counteracted  C.duplicated      D. contradicted
-  17．  A. neglected      B. avoided       C. emphasized     D. admired
-  18．  A. stages         B. illusions     C. fragments      D. advances
-  19．  A. With           B. To            C. Among          D. Beyond
-  20．  A. on the contrary B. by this means C. from the outset D.at that point
+  14.  A. ethical        B.military       C. political      D. human
+  15.  A. ruined         B. commuted      C.patrolled       D. gained
+  16.  A. paralleled     B. counteracted  C.duplicated      D. contradicted
+  17.  A. neglected      B. avoided       C. emphasized     D. admired
+  18.  A. stages         B. illusions     C. fragments      D. advances
+  19.  A. With           B. To            C. Among          D. Beyond
+  20.  A. on the contrary B. by this means C. from the outset D.at that point
                   Section II    Reading   Comprehension
 Part A
 Directions:
@@ -311,7 +311,7 @@ gender to race to cultural studies - were opened up as scholars unpicked the mul
 societies. And it transformed public history too: downstairs became just as fascinating as upstairs.
                         [A] emphasized the virtue of classical heroes.
  41. Petrarch           [B] highlighted the public glory of the leading artists.
- 42.Niccolo Machiavellli [C] focused on epochal figures whose lives were hard to imitate.
+ 42. Niccolo Machiavellli [C] focused on epochal figures whose lives were hard to imitate.
  43. Samuel Smiles      [D] opened up new realms of understanding the great men in history.
                         [E] held that history should be the story of the masses and their record
  44. Thomas Carlyle
@@ -319,7 +319,7 @@ societies. And it transformed public history too: downstairs became just as fasc
  45. Marx and Engels    [F] dismissed virtue as unnecessary for successful leaders.
                         [G]depicted the worthy lives of engineer industrialists and explorers.
                           Section  III Translation
-46．Directions：
+46. Directions：
     In this section there is a text in English. Translate it into Chinese.Write your translation
 on ANSWER   SHEET.(15points)
     When people in developing countries worry about migration,they are usually concerned at
@@ -328,7 +328,7 @@ in the developed world. These are the kind of workers that countries like Britai
 Australia try to attract by using immigration rules that privilege college graduates.
     Lots of studies have found that well-educated people from developing countries are
 particularly likely to emigrate. A big survey of Indian households in 2004 found that nearly 40%
-of emigrants had more than a high-school education,compared with around 3.3% of all Indians
+of emigrants had more than a high-school education,compared with around 3. 3% of all Indians
 over the age of 25. This "brain drain"has long bothered policymakers in poor countries. They fear
 that it hurts their economies,depriving them of much-needed skilled workers who could have
 taught at their universities,worked in their hospitals and come up with clever new products for
@@ -338,7 +338,7 @@ their factories to make.
  
                               Section  IV    Writing
  Part A
- 47．Directions:
+ 47. Directions:
      Suppose you have found something wrong with the electronic dictionary that you bought
  from an online store the other day. Write an email to the customer service center to
      1)  make a complaint, and
@@ -347,7 +347,7 @@ their factories to make.
      Do not sign your own name at the end of the letter. Use "Zhang Wei "instead.(10 points)
      Do not write your address. (10 points)
  Part B
- 48．Directions:
+ 48. Directions:
      Write an essay based on the following table. In your writing, you should
      1) describe the table,and
      2) give your comments.
