--- a/md/2014-En.md
+++ b/md/2014-En.md
@@ -28,26 +28,26 @@ anti-obesity 19 . My own hospital system has banned sugary drinks from its facil
 employers have instituted weight loss and fitness initiatives. Michelle Obama launched a
 high-visibility campaign 20 childhood obesity, even claiming that it represents our greatest
 national security threat.
-  1．   A. denied         B. concluded     C. doubted        D. ensured
-  2．   A. protective     B. dangerous     C. sufficient     D. troublesome
-  3．   A. Instead        B. However       C. Likewise       D. Therefore
-  4．   A. indicator      B. objective     C. origin         D. example
-  5．   A. impact         B. relevance     C. assistance     D. concern
-  6．   A. in terms of    B. in case of    C. in favor of    D. in respect of
-  7．   A. measures       B. determines    C. equals         D. modifies
-  8．   A. in essence     B. in contrast   C. in turn        D. in part
-  9．   A. complicated    B. conservative  C. variable       D. straightforward
-  10．  A. so             B. while         C. since          D. unless
-  11．  A. shape          B. spirit        C. balance        D. taste
-  12．  A. start          B. qualify       C. retire         D. stay
+  1.   A. denied         B. concluded     C. doubted        D. ensured
+  2.   A. protective     B. dangerous     C. sufficient     D. troublesome
+  3.   A. Instead        B. However       C. Likewise       D. Therefore
+  4.   A. indicator      B. objective     C. origin         D. example
+  5.   A. impact         B. relevance     C. assistance     D. concern
+  6.   A. in terms of    B. in case of    C. in favor of    D. in respect of
+  7.   A. measures       B. determines    C. equals         D. modifies
+  8.   A. in essence     B. in contrast   C. in turn        D. in part
+  9.   A. complicated    B. conservative  C. variable       D. straightforward
+  10.  A. so             B. while         C. since          D. unless
+  11.  A. shape          B. spirit        C. balance        D. taste
+  12.  A. start          B. qualify       C. retire         D. stay
   13.  A. strange        B. changeable    C. normal         D. constant
-  14．  A. option         B. reason        C. opportunity    D. tendency
-  15．  A. employed       B. pictured      C. imitated       D. monitored
-  16．  A. compared       B. combined      C. settled        D. associated
-  17．  A. Even           B. Still         C. Yet            D. Only
-  18．  A. despised       B. corrected     C. ignored        D. grounded
-  19．  A. discussions    B. businesses    C. policies       D. studies
-  20．  A. for            B. against       C. with           D. without
+  14.  A. option         B. reason        C. opportunity    D. tendency
+  15.  A. employed       B. pictured      C. imitated       D. monitored
+  16.  A. compared       B. combined      C. settled        D. associated
+  17.  A. Even           B. Still         C. Yet            D. Only
+  18.  A. despised       B. corrected     C. ignored        D. grounded
+  19.  A. discussions    B. businesses    C. policies       D. studies
+  20.  A. for            B. against       C. with           D. without
                    Section  II Reading   Comprehension
 Part A
 Directions:
@@ -140,7 +140,7 @@ portray an idealized version of themselves.
 28. Epley found that people with higher self-esteem tended to ______.
     [A] underestimate their insecurities   [B] believe in their attractiveness
     [C] cover up their depressions         [D] oversimplify their illusions
-29.The word “viscerally”(Line 2,para.5) is closest in meaning to ______.
+29. The word “viscerally”(Line 2,para.5) is closest in meaning to ______.
     [A]instinctively   [B]occasionally     [C]particularly    [D]aggressively
 30. It can be inferred that Facebook is self-enhancer’s paradise because people can ______.
     [A]present their dishonest profiles    [B]define their traditional life styles
@@ -291,11 +291,11 @@ scaled exhibition wasn’t about imposing on the landscape, more a kind of lands
 light conceptual art created passing through. It had its origins in the great outdoors, but the results
 were as gallery-bound as the paintings of Turner and Constable.
                      A. originates from a long walk that the artist took.
-41.Stone Circle      B.illustrates a kind of landscape orientated light conceptual art.
-42.Olaf Street Study C.reminds people of the English landscape painting tradition.
-43.Across the Park   D. represents the elegance of the British land art.
-44.Towards Avebury   E. depicts the ordinary side of the British land art.
-45.Seven Days        F.embodies a romantic escape into the Scottish outdoors.
+41. Stone Circle      B.illustrates a kind of landscape orientated light conceptual art.
+42. Olaf Street Study C.reminds people of the English landscape painting tradition.
+43. Across the Park   D. represents the elegance of the British land art.
+44. Towards Avebury   E. depicts the ordinary side of the British land art.
+45. Seven Days        F.embodies a romantic escape into the Scottish outdoors.
                      G.contains images from different parts of the same photograph.
                           Section  III Translation
 46. Directions:
@@ -324,7 +324,7 @@ Write him an email to
   Do not use your own name. Use "Li Ming" instead.
   Do not write your address. (10 points)
 Part B
-48.Directions:
+48. Directions:
     Write an essay based on the following chart. In your writing, you should
     1)  interpret the chart, and
  2)  give your comments.
