--- a/md/2016-En.md
+++ b/md/2016-En.md
@@ -31,26 +31,26 @@ view, the authors believe it at least 18 at that possibility. It’s not hard to
 culture and sentiment would help 19 how executives think about the future. “It surely seems
 plausible that happy people would be more forward –thinking and creative and 20 R&D
 more than the average,” said one researcher.
-  1．   A. why            B. where         C. how            D. when
-  2．   A. In return      B. In particular C. In contrast    D. In conclusion
-  3．   A. sufficient     B. famous        C. perfect        D. necessary
-  4．   A. individualism  B. modernism     C. optimism       D. realism
-  5．   A. echo           B. miss          C. spoil          D. change
-  6．   A. imagined       B. measured      C. invented       D. assumed
-  7．   A. Sure           B. Odd           C. Unfortunate    D. Often
-  8．   A. advertised     B. divided       C. overtaxed      D. headquartered
-  9．   A. explain        B. overstate     C. summarize      D. emphasize
-  10．  A. stages         B. factors       C. levels         D. methods
-  11．  A. desirable      B. sociable      C. reputable      D. reliable
-  12．  A. resumed        B. held          C. emerged        D. broke
+  1.   A. why            B. where         C. how            D. when
+  2.   A. In return      B. In particular C. In contrast    D. In conclusion
+  3.   A. sufficient     B. famous        C. perfect        D. necessary
+  4.   A. individualism  B. modernism     C. optimism       D. realism
+  5.   A. echo           B. miss          C. spoil          D. change
+  6.   A. imagined       B. measured      C. invented       D. assumed
+  7.   A. Sure           B. Odd           C. Unfortunate    D. Often
+  8.   A. advertised     B. divided       C. overtaxed      D. headquartered
+  9.   A. explain        B. overstate     C. summarize      D. emphasize
+  10.  A. stages         B. factors       C. levels         D. methods
+  11.  A. desirable      B. sociable      C. reputable      D. reliable
+  12.  A. resumed        B. held          C. emerged        D. broke
   13.  A. attribute      B. assign        C. transfer       D. compare
-  14．  A. serious        B. civilized     C. ambitious      D. experienced
-  15．  A. thus           B. instead       C. also           D. never
-  16．  A. rapidly        B. regularly     C. directly       D. equally
-  17．  A. After          B. Until         C. While          D. Since
-  18．  A. arrives        B. jumps         C. hints          D. strikes
-  19．  A. shape          B. rediscover    C. simplify       D. share
-  20．  A. pray for       B. lean towards  C. give away      D. send out
+  14.  A. serious        B. civilized     C. ambitious      D. experienced
+  15.  A. thus           B. instead       C. also           D. never
+  16.  A. rapidly        B. regularly     C. directly       D. equally
+  17.  A. After          B. Until         C. While          D. Since
+  18.  A. arrives        B. jumps         C. hints          D. strikes
+  19.  A. shape          B. rediscover    C. simplify       D. share
+  20.  A. pray for       B. lean towards  C. give away      D. send out
                   Section  II   Reading   Comprehension
 Part A
 Directions:
@@ -85,23 +85,23 @@ is not the sole purpose of the classes. These kids are going to be surrounded by
 their pockets, in their offices, in their homes—for the rest of their lives. The younger they learn
 how computers think, how to coax the machine into producing what they want —the earlier they
 learn that they have the power to do that —the better.
-21.Cortina holds that early exposure to computer science makes it easier to _______.
+21. Cortina holds that early exposure to computer science makes it easier to _______.
     A. complete future job training        B. remodel the way of thinking
     C. formulate logical hypotheses        D. perfect artwork production
-22.In delivering lessons for high–schoolers, Flatiron has considered their _______.
+22. In delivering lessons for high–schoolers, Flatiron has considered their _______.
     A. experience                          B. interest
     C. career prospects                    D. academic backgrounds
-23.Deborah Seehorn believes that the skills learned at Flatiron will _______.
+23. Deborah Seehorn believes that the skills learned at Flatiron will _______.
     A. help students learn other computer languages
     B. have to be upgraded when new technologies come
     C. need improving when students look for jobs
     D. enable students to make big quick money
-24.According to the last paragraph, Flatiron students are expected to _______.
+24. According to the last paragraph, Flatiron students are expected to _______.
     A. bring forth innovative computer technologies
     B. stay longer in the information technology industry
     C. become better prepared for the digitalized world
     D. compete with a future army of programmers
-25.The word “coax” (Line4, Para.6) is closest in meaning to _______.
+25. The word “coax” (Line4, Para.6) is closest in meaning to _______.
     A. persuade        B. frighten         C. misguide        D. challenge
                                     Text 2
     Biologists estimate that as many as 2 million lesser prairie chicken—a kind of bird living on
@@ -134,15 +134,15 @@ challenging it in federal court. Not surprisingly, industry groups and states ge
 too far; environmentalists say it doesn’t go far enough. “The federal government is giving
 responsibility for managing the bird to the same industries that are pushing it to extinction,” says
 biologist Jay Lininger.
-26.The major reason for listing the lesser prairie as threatened is_______.
+26. The major reason for listing the lesser prairie as threatened is_______.
     [A] its drastically decreased population
     [B] the underestimate of the grassland acreage
     [C] a desperate appeal from some biologists
     [D] the insistence of private landowners
-27.The “threatened” tag disappointed some environmentalists in that it_______.
+27. The “threatened” tag disappointed some environmentalists in that it_______.
     [A] was a give-in to governmental pressure [B] would involve fewer agencies in action
     [C] granted less federal regulatory power [D] went against conservation policies
-28.It can be learned from Paragraph3 that unintentional harm-doers will not be prosecuted if
+28. It can be learned from Paragraph3 that unintentional harm-doers will not be prosecuted if
 they_______.
     [A] agree to pay a sum for compensation
     [B] volunteer to set up an equally big habitat
@@ -151,7 +151,7 @@ they_______.
 29. According to Ashe, the leading role in managing the species in_______.
     [A] the federal government             [B] the wildlife agencies
     [C] the landowners                     [D] the states
-30.Jay Lininger would most likely support_______.
+30. Jay Lininger would most likely support_______.
     [A] industry groups                    [B] the win-win rhetoric
     [C] environmental groups               [D] the plan under challenge
                                     Text 3
