--- a/md/2017-En.md
+++ b/md/2017-En.md
@@ -26,26 +26,26 @@ time to counterbalance the intellectual and emotional 17 of their jobs. “When 
 from a hard day’s work, I often feel 18 ,” Danaher says, adding, “In a world in which I don’t
 have to work, I might feel rather different”—perhaps different enough to throw himself 19 a
 hobby or a passion project with the intensity usually reserved for 20 matters.
-  1．   A. boasting       B. denying       C. warning        D. ensuring
-  2．   A. inequality     B. instability   C. unreliability  D. uncertainty
-  3．   A. policy         B. guideline     C. resolution     D. prediction
-  4．   A. characterized  B. divided       C. balanced       D. measured
-  5．   A. wisdom         B. meaning       C. glory          D. freedom
-  6．   A. Instead        B. Indeed        C. Thus           D. Nevertheless
-  7．   A. rich           B. urban         C. working        D. educated
-  8．   A. explanation    B. requirement   C. compensation   D. substitute
-  9．   A. under          B. beyond        C. alongside      D. among
-  10．  A. leave behind   B. make up       C. worry about    D. set aside
-  11．  A. statistically  B. occasionally  C. necessarily    D. economically
-  12．  A. chances        B. downsides     C. benefits       D. principles
+  1.   A. boasting       B. denying       C. warning        D. ensuring
+  2.   A. inequality     B. instability   C. unreliability  D. uncertainty
+  3.   A. policy         B. guideline     C. resolution     D. prediction
+  4.   A. characterized  B. divided       C. balanced       D. measured
+  5.   A. wisdom         B. meaning       C. glory          D. freedom
+  6.   A. Instead        B. Indeed        C. Thus           D. Nevertheless
+  7.   A. rich           B. urban         C. working        D. educated
+  8.   A. explanation    B. requirement   C. compensation   D. substitute
+  9.   A. under          B. beyond        C. alongside      D. among
+  10.  A. leave behind   B. make up       C. worry about    D. set aside
+  11.  A. statistically  B. occasionally  C. necessarily    D. economically
+  12.  A. chances        B. downsides     C. benefits       D. principles
   13.  A. absence        B. height        C. face           D. course
-  14．  A. disturb        B. restore       C. exclude        D. yield
-  15．  A. model          B. practice      C. virtue         D. hardship
-  16．  A. tricky         B. lengthy       C. mysterious     D. scarce
-  17．  A. demands        B. standards     C. qualities      D. threats
-  18．  A. ignored        B. tired         C. confused       D. starved
-  19．  A. off            B. against       C. behind         D. into
-  20．  A. technological  B. professional  C. educational    D. interpersonal
+  14.  A. disturb        B. restore       C. exclude        D. yield
+  15.  A. model          B. practice      C. virtue         D. hardship
+  16.  A. tricky         B. lengthy       C. mysterious     D. scarce
+  17.  A. demands        B. standards     C. qualities      D. threats
+  18.  A. ignored        B. tired         C. confused       D. starved
+  19.  A. off            B. against       C. behind         D. into
+  20.  A. technological  B. professional  C. educational    D. interpersonal
                    Section  II Reading   Comprehension
 Part A
 Directions:
