--- a/md/2018-En.md
+++ b/md/2018-En.md
@@ -27,26 +27,26 @@ to 17  to see such an image. These results suggest that imagining the 18 of foll
 on one's curiosity ahead of time can help determine 19 it is worth the endeavor." Thinking
 about long-term 20 is key to reducing the possible negative effects of curiosity. Hsee says "in
 other words, don't read online comments".
-  1．   A. protect        B. resolve       C. discuss        D. ignore
-  2．   A. refuse         B. wait          C. regret         D. seek
-  3．   A. hurt           B. last          C. mislead        D. rise
-  4．   A. alert          B. tie           C. treat          D. expose
-  5．   A. message        B. review        C. trial          D. concept
-  6．   A. remove         B. weaken        C. interrupt      D. deliver
-  7．   A. when           B. if            C. though         D. unless
-  8．   A. continue       B. happen        C. disappear      D. change
-  9．   A. rather than    B. regardless of C. such as        D. owing to
-  10．  A. discover       B. forgive       C. forget         D. disagree
-  11．  A. pay            B. marriage      C. schooling      D. food
-  12．  A. lead to        B. rest on       C. learn from     D. begin with
+  1.   A. protect        B. resolve       C. discuss        D. ignore
+  2.   A. refuse         B. wait          C. regret         D. seek
+  3.   A. hurt           B. last          C. mislead        D. rise
+  4.   A. alert          B. tie           C. treat          D. expose
+  5.   A. message        B. review        C. trial          D. concept
+  6.   A. remove         B. weaken        C. interrupt      D. deliver
+  7.   A. when           B. if            C. though         D. unless
+  8.   A. continue       B. happen        C. disappear      D. change
+  9.   A. rather than    B. regardless of C. such as        D. owing to
+  10.  A. discover       B. forgive       C. forget         D. disagree
+  11.  A. pay            B. marriage      C. schooling      D. food
+  12.  A. lead to        B. rest on       C. learn from     D. begin with
   13.  A. withdrawal     B. persistence   C. inquiry        D. diligence
-  14．  A. self-reliant   B. self-destructive C. self-evident D. self-deceptive
-  15．  A. define         B. resist        C. replace        D. trace
-  16．  A. overlook       B. predict       C. design         D. conceal
-  17．  A. remember       B. promise       C. choose         D. pretend
-  18．  A. relief         B. plan          C. duty           D. outcome
-  19．  A. why            B. whether       C. where          D. how
-  20．  A. consequences   B. investments   C. strategies     D. limitations
+  14.  A. self-reliant   B. self-destructive C. self-evident D. self-deceptive
+  15.  A. define         B. resist        C. replace        D. trace
+  16.  A. overlook       B. predict       C. design         D. conceal
+  17.  A. remember       B. promise       C. choose         D. pretend
+  18.  A. relief         B. plan          C. duty           D. outcome
+  19.  A. why            B. whether       C. where          D. how
+  20.  A. consequences   B. investments   C. strategies     D. limitations
                    Section II  Reading   Comprehension
     Part A
     Directions:
@@ -82,27 +82,27 @@ most aren't equipped to do them. Koziatek's Manchester school of Technology High
 trying to fill that gap.
     Koziatek's school is a wake-up call. When education becomes one-size-fits-all, it risks
 overlooking a nation's diversity of gifts.
-21.A broken bike chain is mentioned to show students' lack of______.
+21. A broken bike chain is mentioned to show students' lack of______.
 [A] practical ability
 [B] academic training
 [C] pioneering spirit
 [D] mechanical memorization
-22.There exists the prejudice that vocational education is for kids who______.
+22. There exists the prejudice that vocational education is for kids who______.
 [A] have a stereotyped mind
 [B] have no career motivation
 [C] are not academically successful
 [D] are financially disadvantaged
-23.We can infer from Paragraph 5 that high school graduates______.
+23. We can infer from Paragraph 5 that high school graduates______.
 [A] used to have big financial concerns
 [B] used to have more job opportunities
 [C] are reluctant to work in manufacturing
 [D] are entitled to more educational privileges
-24.The headlong push into bachelor's degrees for all______.
+24. The headlong push into bachelor's degrees for all______.
 [A] helps create a lot of middle-skill jobs
 [B] may narrow the gap in working-class jobs
 [C] is expected to yield a better-trained workforce
 [D] indicates the overvaluing of higher education
-25.The author's attitude toward Koziatek's school can be described as______ .
+25. The author's attitude toward Koziatek's school can be described as______ .
 [A] supportive
 [B] tolerant
 [C] disappointed
@@ -137,27 +137,27 @@ massive investment could change the picture rapidly in coming years.
 in energy sources appears to be speeding up—perhaps just in time to have a meaningful effect in
 slowing climate change. What Washington does—or doesn't do—to promote alternative energy
 may mean less and less at a time of a global shift in thought.
-26.The word "plummeting"（Line 2, Para.2）is closest in meaning to______.
+26. The word "plummeting"（Line 2, Para.2）is closest in meaning to______.
 [A] stabilizing
 [B] changing
 [C] falling
 [D] rising
-27.According to Paragraph 3, the use of renewable energy in America______.
+27. According to Paragraph 3, the use of renewable energy in America______.
 [A] is progressing notably
 [B] is as extensive as in Europe
 [C] faces many challenges
 [D] has proved to be impractical
-28.It can be learned that in Iowa______.
+28. It can be learned that in Iowa______.
 [A] wind is a widely used energy source
 [B] wind energy has replaced fossil fuels
 [C] tech giants are investing in clean energy
 [D] there is a shortage of clean energy supply
-29.Which of the following is true about clean energy according to Paragraphs 5&6?
+29. Which of the following is true about clean energy according to Paragraphs 5&6?
 [A] Its application has boosted battery storage.
 [B] It is commonly used in car manufacturing.
 [C] Its continuous supply is becoming a reality.
 [D] Its sustainable exploitation will remain difficult.
-30.It can be inferred from the last paragraph that renewable energy______.
+30. It can be inferred from the last paragraph that renewable energy______.
 [A] will bring the USA closer to other countries
 [B] will accelerate global environmental change
 [C] is not really encouraged by the USA government
@@ -190,27 +190,27 @@ of the digital giants. Just as some ants farm the bugs called aphids for the hon
 when they feed, so Google farms us for the data that our digital lives yield. Ants keep predatory
 insects away from where their aphids feed; Gmail keeps the spammer out of our inboxes. It doesn't
 feel like a human or democratic relationship, even if both sides benefit.
-31.According to Paragraph 1, Facebook acquired WhatsApp for its______.
+31. According to Paragraph 1, Facebook acquired WhatsApp for its______.
 [A] digital products
 [B] user information
 [C] physical assets
 [D] quality service
-32.Linking phone numbers to Facebook identities may______.
+32. Linking phone numbers to Facebook identities may______.
 [A] worsen political disputes
 [B] mess up customer records
 [C] pose a risk to Facebook users
 [D] mislead the European commission
-33.According to the author,competition law______.
+33. According to the author,competition law______.
 [A] should sever the new market powers
 [B] may worsen the economic imbalance
 [C] should not provide just one legal solution
 [D] cannot keep pace with the changing market
-34.Competition law as presently interpreted can hardly protect Facebook users because.
+34. Competition law as presently interpreted can hardly protect Facebook users because.
 [A] they are not defined as customers
 [B] they are not financially reliable
 [C] the services are generally digital
 [D] the services are paid for by advertisers
-35.The ants analogy is used to illustrate______.
+35. The ants analogy is used to illustrate______.
 [A] a win-win business model between digital giants
 [B] a typical competition pattern among digital giants
 [C] the benefits provided for digital giants 'customers
@@ -248,28 +248,28 @@ When  our brains switch between being focused and unfocused on a task, they tend
 efficient.
     "What people don't realise is that in order to complete these tasks they need to use both the
 focus and unfocus circuits in their brain," says Pillay.
-36.The key to mastering the art of deep work is to______ .
+36. The key to mastering the art of deep work is to______ .
     
 [A] keep to your focus time
 [B] list your immediate tasks
 [C] make specific daily plans
 [D] seize every minute to work
-37.The study in the early 1980s cited by Harford shows that______.
+37. The study in the early 1980s cited by Harford shows that______.
 [A] distractions may actually increase efficiency.
 [B] daily schedules are indispensable to studying
 [C] students are hardly motivated by monthly goals
 [D] detailed plans may not be as fruitful as expected
-38.According to Newport, idleness is______.
+38. According to Newport, idleness is______.
 [A] a desirable mental state for busy people.
 [B] a major contributor to physical health
 [C] an effective way to save time and energy
 [D] an essential factor in accomplishing any work
-39.Pillay believes that our brains' shift between being focused and unfocused______.
+39. Pillay believes that our brains' shift between being focused and unfocused______.
 [A] can result in psychological well-being
 [B] can bring about greater efficiency
 [C] is aimed at better balance in work
 [D] is driven by task urgency
-40.This text is mainly about______.
+40. This text is mainly about______.
 [A] ways to relieve the tension of busy life
 [B] approaches to getting more done in less time
 [C] the key to eliminating distractions
@@ -335,7 +335,7 @@ So the feel a responsibility to you to keep that relationship going.
 person is a really good book to read, or to have a conversation with!
                          Section  III  Translation
 12  
-46.Directions:
+46. Directions:
     Translate the following text into Chinese. Write your translation neatly on the
 ANSWER   SHEET.  （15 points）
         A fifth grader gets a homework assignment to select his future career path from a list of
