--- a/md/2019-En.md
+++ b/md/2019-En.md
@@ -28,26 +28,26 @@ specific fitness goals, 19 I’m training according to those goals, instead of n
 scale.
     Rather than 20   over the scale, turn your focus to how you look, feel, how your clothes
 fit and your overall energy level.
-  1．   A. Therefore      B. Otherwise     C. However        D. Besides
-  2．   A. cares          B. warns         C.reduces         D. helps
-  3．   A. solely         B. occasionally  C. formally       D. initially
-  4．   A. lowering       B. explaining    C. accepting      D. recording
-  5．   A. set            B. review        C. reach          D. modify
-  6．   A. depiction      B. distribution  C. prediction     D. definition
-  7．   A. regardless of  B. aside from    C. along with     D. due to
-  8．   A. rigid          B. precise       C. immediate      D. orderly
-  9．   A. desperately    B. sincerely     C. reluctantly    D. gratefully
-  10．  A. though         B. again         C. indeed         D.instead
-  11．  A. track          B. overlook      C. conceal        D. report
-  12．  A. approval of    B. hold onto     C. account for    D. depend on
+  1.   A. Therefore      B. Otherwise     C. However        D. Besides
+  2.   A. cares          B. warns         C.reduces         D. helps
+  3.   A. solely         B. occasionally  C. formally       D. initially
+  4.   A. lowering       B. explaining    C. accepting      D. recording
+  5.   A. set            B. review        C. reach          D. modify
+  6.   A. depiction      B. distribution  C. prediction     D. definition
+  7.   A. regardless of  B. aside from    C. along with     D. due to
+  8.   A. rigid          B. precise       C. immediate      D. orderly
+  9.   A. desperately    B. sincerely     C. reluctantly    D. gratefully
+  10.  A. though         B. again         C. indeed         D.instead
+  11.  A. track          B. overlook      C. conceal        D. report
+  12.  A. approval of    B. hold onto     C. account for    D. depend on
   13.  A. share          B. adjust        C. confirm        D. prepare
-  14．  A. features       B. rules         C.  tests         D. results
-  15．  A. anxious        B. hungry        C. sick           D. bored
-  16．  A. secret         B. belief        C.sign            D. principle
-  17．  A. necessity      B. decision      C. wish           D. request
-  18．  A. surprising     B. restricting   C. consuming      D. disappointing
-  19．  A. because        B. unless        C. until          D. if
-  20．  A. dominating     B. puzzling      C. triumphing     D. obsessing
+  14.  A. features       B. rules         C.  tests         D. results
+  15.  A. anxious        B. hungry        C. sick           D. bored
+  16.  A. secret         B. belief        C.sign            D. principle
+  17.  A. necessity      B. decision      C. wish           D. request
+  18.  A. surprising     B. restricting   C. consuming      D. disappointing
+  19.  A. because        B. unless        C. until          D. if
+  20.  A. dominating     B. puzzling      C. triumphing     D. obsessing
                   Section II    Reading   Comprehension
 Part A
 Directions:
@@ -86,7 +86,7 @@ appeared to turn on how inclined they were to feel guilty. The guilt-prone ones 
 though they hadn’t magically become more sympathetic to the other child’s deprivation.
     “That’s good news,” Malti says. “We can be prosocial because of our empathetic proclivity,
 or because we caused harm and we feel regret.”
-21.Researchers think that guilt can be a good thing because it may help______.
+21. Researchers think that guilt can be a good thing because it may help______.
 A. foster a child’s moral development
 B. regulate a child’s basic emotions
 C. improve a child’s intellectual ability
@@ -144,7 +144,7 @@ U.S. Forest Service, but traditionally they've focused on wildlife, watersheds a
 recreation. Only recently have they come to see the vital part forests will have to play in storing
 carbon. California's plan, which is expected to be finalized by the governor early next year, should
 serve as a model.
-26.By saying “one of the harder challenge,” the author implies that _____.
+26. By saying “one of the harder challenge,” the author implies that _____.
 A. forests may become a potential threat.
 B. people may misunderstand global warming.
 C. extreme weather condition may arise.
@@ -154,7 +154,7 @@ A. lower their present carbon-absorbing capacity.
 B. strike a balance among different plants.
 C. accelerate the growth of young trees.
 D. preserve the diversity of species in them.
-28.California’s Forest Carbon Plan endeavor to _____.
+28. California’s Forest Carbon Plan endeavor to _____.
 A. cultivate more drought -resistance trees.
 B. find more effective ways to kill insects
 C. reduce the density of some of its forest
@@ -164,7 +164,7 @@ A. to carry it out before year of 2020
 B.to handle the areas in serious danger first
 C.to perfect the emissions-permit auction
 D.to obtain enough financial support
-30.The author’s attitude to California’s plan can best be described as _____.
+30. The author’s attitude to California’s plan can best be described as _____.
 A. ambiguous           B. tolerant         C. cautious        D. supportive
                                     Text 3
 6   
@@ -219,7 +219,7 @@ A. Discrimination against foreign workers in the U.S.
 B. Biased laws in favor of some American businesses
 C. Decline of job opportunities in U.S. agriculture
 D. Flaws in US immigration rules for farm workers
-32.Our trouble with us agriculture workforce is _____.
+32. Our trouble with us agriculture workforce is _____.
 A. the aging of immigration from works
 B. the rising number of illegal immigrants
 C. the high mobility of crop works
@@ -298,28 +298,28 @@ widespread behavior.
 We don’t have time to wait. We need progressive policies that shape collective action (and rein in
 polluting business), alongside engaged citizens pushing for change. That’s not something we can
 buy. （732）
-36.Some celebrities star in a new video to _____.
+36. Some celebrities star in a new video to _____.
 A. demand new laws on the use of plastics
 B. urge consumers to cut use of plastics
 C. invite public opinion on the plastic crisis
 D. disclose the causes of the plastics crisis
-37.The author is concerned that “moral licensing” may _____.
+37. The author is concerned that “moral licensing” may _____.
 A. mislead us into doing worthless things
 B. prevent us from making further efforts
 C. weaken our sense of accomplishment
 D. suppress our desire for success
-38.By pointing out identify as “citizens”, the author indicates that _____.
+38. By pointing out identify as “citizens”, the author indicates that _____.
 A. our focus should be shifted to community welfare
 B. our relationship with local industries is improving
 C. we have been actively exercising our civil right
 D. we should press our government to lead the combat
 1
-39.De Sombre argues that the best way for a collective change should be _____.
+39. De Sombre argues that the best way for a collective change should be _____.
 A. a win-win arrangement
 B. a self-driven mechanism
 C. a cost -effective approach
 D. a top-down process
-40.The author concludes that individual efforts _____.
+40. The author concludes that individual efforts _____.
 A. can be too aggressive
 B. are far from sufficient
 C. can be too inconsistent
@@ -383,7 +383,7 @@ ideas of their children, despite the current housing crunch.
                      C. assumes that many children’s views on real estate are influenced
  42. Adam Bailey
                      by the media.
- 43.Tracey Hampson   D. remarks that significant moves may pose challenges to children.
+ 43. Tracey Hampson   D. remarks that significant moves may pose challenges to children.
                      E. says that it is wise to leave kids in the dark about real estate
  44. Aaron Norris
                      decisions.
