--- a/md/2010-En.md
+++ b/md/2010-En.md
@@ -1,4 +1,5 @@
 2010  
+
                         Section  I    Use of English
 
 Directions:
@@ -6,238 +7,402 @@ Directions:
     Read the following text. Choose the best word(s) for each numbered blank and mark A,
 
 B, C or D on the ANSWER SHEET. (10 points)
+
     The outbreak of swine flu that was first detected in Mexico was declared a global epidemic
+
 on June 11, 2009. It is the first worldwide epidemic 1 by the World Health Organization in 41
+
 years.
+
     The heightened alert 2 an emergency meeting with flu experts in Geneva that assembled
+
 after a sharp rise in cases in Australia, and rising 3 in Britain, Japan, Chile and elsewhere.
+
     But the epidemic is “ 4 ” in severity, according to Margaret Chan, the organization’s
+
 director general, 5 the overwhelming majority of patients experiencing only mild symptoms
+
 and a full recovery, often in the 6 of any medical treatment.
+
     The outbreak came to global 7 in late April 2009, when Mexican authorities noted an
+
 unusually large number of hospitalizations and deaths 8 healthy adults. As much of Mexico
+
 City shut down at the height of a panic, cases began to 9 in New York City, the southwestern
+
 United States and around the world.
+
     In the United States, new cases seemed to fade 10 warmer weather arrived. But in late
+
 September 2009, officials reported there was 11 flu activity in almost every state and that
+
 virtually all the 12 tested are the new swine flu, also known as (A) H1N1, not seasonal flu. In
+
 the U.S, it has 13 more than one million people, and caused more than 600 deaths and more
+
 than 6,000 hospitalizations.
+
     Federal health officials 14 Tami flu for children from the national stockpile and began
+
 15    orders from the states for the new swine flu vaccine. The new vaccine, which is different
+
 from the annual flu vaccine, is 16 ahead of expectations. More than three million doses were to
+
 be made available in early October 2009, though most of those 17 doses were of the Flu Mist
+
 nasal spray type, which is not 18 for pregnant women, people over 50 or those with breathing
+
 difficulties, heart disease or several other 19 . But it was still possible to vaccinate people in
+
 other high-risk groups: health care workers, people 20 infants and healthy young people.
 
+  1.   A. criticized     B. appointed     C. commented      D. designated
 
-  1．   A. criticized     B. appointed     C. commented      D. designated
+  2.   A. proceeded      B. activated     C. followed       D. prompted
 
-  2．   A. proceeded      B. activated     C. followed       D. prompted
+  3.   A. digits         B. numbers       C. amounts        D. sums
 
-  3．   A. digits         B. numbers       C. amounts        D. sums
+  4.   A. moderate       B. normal        C. unusual        D. extreme
 
-  4．   A. moderate       B. normal        C. unusual        D. extreme
+  5.   A. with           B. in            C. from           D. by
 
-  5．   A. with           B. in            C. from           D. by
+  6.   A. progress       B. absence       C. presence       D. favor
 
-  6．   A. progress       B. absence       C. presence       D. favor
+  7.   A. reality        B. phenomenon    C. concept        D. notice
 
-  7．   A. reality        B. phenomenon    C. concept        D. notice
+  8.   A. over           B. for           C. among          D. to
 
-  8．   A. over           B. for           C. among          D. to
+  9.   A. stay up        B. crop up       C. fill up        D. cover up
 
-  9．   A. stay up        B. crop up       C. fill up        D. cover up
+  10.  A. as             B. if            C. unless         D. until
 
-  10．  A. as             B. if            C. unless         D. until
+  11.  A. excessive      B. enormous      C. significant    D. magnificent
 
-  11．  A. excessive      B. enormous      C. significant    D. magnificent
-
-  12．  A. categories     B. examples      C. patterns       D. samples
+  12.  A. categories     B. examples      C. patterns       D. samples
 
   13.  A. imparted       B. immersed      C. injected       D. infected
 
-  14．  A. released       B.relayed        C. relieved       D. remained
+  14.  A. released       B.relayed        C. relieved       D. remained
 
-  15．  A.placing         B. delivering    C.taking          D. giving
+  15.  A.placing         B. delivering    C.taking          D. giving
 
-  16．  A. feasible       B. available     C.reliable        D. applicable
+  16.  A. feasible       B. available     C.reliable        D. applicable
 
-  17．  A. prevalent      B. principal     C. innovative     D. initial
+  17.  A. prevalent      B. principal     C. innovative     D. initial
 
-  18．  A. presented      B. restricted    C. recommended    D. introduced
+  18.  A. presented      B. restricted    C. recommended    D. introduced
 
-  19．  A. problems       B. issues        C.agonies         D. sufferings
+  19.  A. problems       B. issues        C.agonies         D. sufferings
 
-  20．  A. involved in    B. caring for    C. concerned with D. warding off
-
+  20.  A. involved in    B. caring for    C. concerned with D. warding off
 
                    Section  II Reading   Comprehension
 
 Part A
+
 Directions:
 
     Read the following four texts. Answer the questions below each text by choosing A, B, C
 
 or D. Mark your answers on ANSWER SHEET 1. (40 points)
 
-
                                     Text 1
+
     The longest bull run in a century of art-market history ended on a dramatic note with a sale of
+
 56 works by Damien Hirst, Beautiful Inside My Head Forever, at Sotheby’s in London on
+
 September 15th 2008. All but two pieces sold, fetching more than ￡70m, a record for a sale by a
+
 single artist. It was a last victory. As the auctioneer called out bids, in New York one of the oldest
+
 banks on Wall Street, Lehman Brothers, filed for bankruptcy.
+
     The world art market had already been losing momentum for a while after rising
+
 bewilderingly since 2003. At its peak in 2007 it was worth some $65 billion, reckons Clare
+
 McAndrew, founder of Arts Economics, a research firm — double the figure five years earlier.
+
 Since then it may have come down to $50 billion. But the market generates interest far beyond its
+
 size because it brings together great wealth, enormous egos, greed, passion and controversy in a
+
 way matched by few other industries.
+
     In the weeks and months that followed Mr. Hirst’s sale, spending of any sort became deeply
+
 unfashionable. In the art world that meant collectors stayed away from galleries and salerooms.
+
 Sales of contemporary art fell by two-thirds, and in the most overheated sector, they were down by
+
 nearly 90% in the year to November 2008. Within weeks the world’s two biggest auction houses,
+
 Sotheby’s and Christie’s, had to pay out nearly $200m in guarantees to clients who had placed
+
 works for sale with them.
+
     The current downturn in the art market is the worst since the Japanese stopped buying
+
 Impressionists at the end of 1989. This time experts reckon that prices are about 40% down on
+
 their peak on average, though some have been far more fluctuant. But Edward Dolman, Christie’s
+
 chief executive, says:“I’m pretty confident we’re at the bottom.”
+
     What makes this slump different from the last, he says, is that there are still buyers in the
+
 market. Almost everyone who was interviewed for this special report said that the biggest problem
+
 at the moment is not a lack of demand but a lack of good work to sell. The three Ds – death, debt
+
 and divorce — still deliver works of art to the market. But anyone who does not have to sell is
+
 keeping away, waiting for confidence to return.
 
 21. In the first paragraph, Damien Hirst’s sale was referred to as “a last victory” because ______.
+
    [ A ] the art market had witnessed a succession of victories
+
    [ B ] the auctioneer finally got the two pieces at the highest bids
+
    [ C ] Beautiful Inside My Head Forever won over all masterpieces
+
    [ D ] it was successfully made just before the world financial crisis
+
 22. By saying “spending of any sort became deeply unfashionable” (Para.3), the author suggests
+
 that ______.
+
    [ A ] collectors were no longer actively involved in art-market auctions
+
    [ B ] people stopped every kind of spending and stayed away from galleries
+
    [ C ] art collection as a fashion had lost its appeal to a great extent
+
    [ D ] works of art in general had gone out of fashion so they were not worth buying
+
 23. Which of the following statement is NOT true?
+
    [ A ] Sales of contemporary art fell dramatically from 2007 to 2008.
+
    [ B ] The art market surpassed many other industries in momentum.
+
    [ C ] The art market generally went downward in various ways.
+
    [ D ] Some art dealers were awaiting better chances to come.
+
 24. The three Ds mentioned in the last paragraph are______.
+
    [ A ] auction house’ favorites      [ B ] contemporary trends
+
    [ C ] factors promoting artwork circulation [ D ] styles representing Impressionists
+
 25. The most appropriate title for this text could be______.
+
    [ A ] Fluctuation of Art Prices     [ B ] Up-to-date Art Auctions
+
    [ C ] Art Market in Decline         [ D ] Shifted Interest in Arts
 
                                     Text 2
+
     I was addressing a small gathering in a suburban Virginia living room—a women’s group that
+
 had invited men to join them. Throughout the evening, one man had been particularly talkative,
+
 frequently offering ideas and anecdotes, while his wife sat silently beside him on the couch.
+
 Toward the end of the evening, I commented that women frequently complain that their husband
+
 don’t talk to them. This man quickly nodded in agreement. He gestured toward his wife and said,
+
 “She’s the talker in our family.”The room burst into laughter; the man looked puzzled and hurt.
+
 “It’s true,” he explained. “When I come home from work I have nothing to say. If she didn’t keep
+
 the conversation going, we’d spend the whole evening in silence.”
+
     This episode crystallizes the irony that although American men tend to talk more than women
+
 in public situations, they often talk less at home. And this pattern is wreaking havoc with
+
 marriage.
+
     The pattern was observed by political scientist Andrew Hacker in the late 1970s. Sociologist
+
 Catherine Kohler Riessman reports in her new book Divorce Talk that most of the women she
+
 interviewed — but only a few of the men — gave lack of communication as the reason for their
+
 divorces. Given the current divorce rate of nearly 50 percent, that amounts to millions of cases in
+
 the United States every year—a virtual epidemic of failed conversation.
+
     In my own research, complaints from women about their husbands most often focused not on
+
 tangible inequities such as having given up the chance for a career to accompany a husband to his,
+
 or doing far more than their share of daily life - support work like cleaning, cooking and social
+
 arrangements. Instead, they focused on communication: “He doesn’t listen to me.”“He doesn’t talk
+
 to me.”I found, as Hacker observed years before, that most wives want their husband to be, first
+
 and foremost, conversational partners, but few husbands share this expectation of their wives.
+
     In short, the image that best represents the current crisis is the stereotypical cartoon scene of
+
 a man sitting at the breakfast table with a newspaper held up in front of his face, while a woman
+
 glares at the back of it, wanting to talk.
 
 26. What is most wives’ main expectation of their husbands?
+
     [ A ] Talking to them            [ B ] Trusting them
+
     [ C ] Supporting their careers   [ D ] Sharing housework
+
 27. Judging from the context, the phrase “wreaking havoc” (Line 3, Para.2) most probably
+
 means______.
+
     [ A ] generating motivation      [ B ] exerting influence
+
     [ C ] causing damage             [ D ] creating pressure
+
 28. All of the following are true EXCEPT ______.
+
     [ A ] men tend to talk more in public than women
+
     [ B ] nearly 50 percent of recent divorces are caused by failed conversation
+
     [ C ] women attach much importance to communication between couples
+
     [ D ] a female tends to be more talkative at home than her spouse
+
 29. Which of the following can best summarize the main idea of this text?
+
     [ A ] The moral decaying deserves more research by sociologists
+
     [ B ] Marriage break-up stems from sex inequalities
+
     [ C ] Husband and wife have different expectations from their marriage
+
     [ D ] Conversational patterns between man and wife are different
+
 30. In the following part immediately after this text, the author will most probably focus on
+
 ______.
+
     [ A ] a vivid account of the new book Divorce Talk
+
     [ B ] a detailed description of the stereotypical cartoon
+
     [ C ] other possible reasons for a high divorce rate in the U.S
+
     [ D ] a brief introduction to the political scientist Andrew Hacker
 
                                     Text 3
+
     Over the past decade, many companies had perfected the art of creating automatic behaviors
+
 —  habits—among consumers. These habits have helped companies earn billions of dollars when
+
 customers eat snacks or wipe counters almost without thinking, often in response to a carefully
+
 designed set of daily cues.
+
     “There are fundamental public health problems, like dirty hands instead of a soap habit, that
+
 remain killers only because we can’t figure out how to change people’s habits,” said Dr. Curtis,
+
 the director of the Hygiene Center at the London School of Hygiene & Tropical Medicine. “We
+
 wanted to learn from private industry how to create new behaviors that happen automatically.”
+
     The companies that Dr. Curtis turned to — Procter & Gamble, Colgate — Palmolive and
+
 Unilever — had invested hundreds of millions of dollars finding the subtle cues in consumers’
+
 lives that corporations could use to introduce new routines.
+
     If you look hard enough, you’ll find that many of the products we use every day—chewing
+
 gums, skin moisturizers, disinfecting wipes, sir fresheners, water purifiers, health snacks, teeth
+
 whiteners, fabric softeners, vitamins — are results of manufactured habits. A century ago, few
+
 people regularly brushed their teeth multiple times a day. Today, because of shrewd advertising
+
 and public health campaigns, many Americans habitually give their pearly whites a cavity –
+
 preventing scrub twice a day, often with Colgate, Crest or one of the other brands.
+
     A few decades ago, many people didn’t drink water outside of a meal. Then beverage
+
 companies started bottling the production of far–off springs, and now office workers unthinkingly
+
 sip bottled water all day long. Chewing gum, once bought primarily by adolescent boys, is now
+
 featured in commercials as a breath freshener and teeth cleanser for use after a meal. Skin
+
 moisturizers are advertised as part of morning beauty rituals, slipped in between hair brushing and
+
 putting on makeup.
+
     “Our products succeed when they become part of daily or weekly patterns,” said Carol
+
 Berning, a consumer psychologist who recently retired from Procter & Gamble, the company that
+
 sold $76 billion of Tide, Crest and other products last year. “Creating positive habits is a huge part
+
 of improving our consumers” live, and it’s essential to making new products commercially
+
 viable.”
+
     Through experiments and observation, social scientists like Dr. Berning have learned that
+
 there is power in tying certain behaviors to habitual cues through ruthless advertising. As this new
+
 science of habit has emerged, controversies have erupted when the tactics have been used to sell
+
 questionable beauty creams or unhealthy foods.
 
 31. According to Dr. Curtis, habits like hand washing with soap______.
-    [ A ] should be further cultivated [ B ] should be changed gradually
-    [ C ] are deeply rooted in history [ D ] are basically private concerns
-32. Bottled water, chewing gum and skin moisturizers are mentioned in Paragraph 3 so as
-  to______.
-    [ A ] reveal their impact on people’s habits
-    [ B ] show the urgent need of daily necessities
-    [ C ] indicate their effect on people’s buying power
-    [ D ] manifest the significant role of good habits
-33. Which of the following does NOT belong to products that help create people’s habits?
-    [ A ] Tide.        [ B ] Crest    [ C ] Colgate     [ D ] Unilever
-34. From the text we know that some of consumers’ habits are developed due to ______.
-    [ A ]perfected art of products
-    [ B ]automatic behavior creation
-    [ C ]commercial promotions
-    [ D ]scientific experiments
-35. The author’s attitude toward the influence of advertisement on people’s habits is______.
-    [ A ] indifferent  [ B ] negative      [ C ] positive  [ D ] biased
 
+    [ A ] should be further cultivated [ B ] should be changed gradually
+
+    [ C ] are deeply rooted in history [ D ] are basically private concerns
+
+32. Bottled water, chewing gum and skin moisturizers are mentioned in Paragraph 3 so as
+
+  to______.
+
+    [ A ] reveal their impact on people’s habits
+
+    [ B ] show the urgent need of daily necessities
+
+    [ C ] indicate their effect on people’s buying power
+
+    [ D ] manifest the significant role of good habits
+
+33. Which of the following does NOT belong to products that help create people’s habits?
+
+    [ A ] Tide.        [ B ] Crest    [ C ] Colgate     [ D ] Unilever
+
+34. From the text we know that some of consumers’ habits are developed due to ______.
+
+    [ A ]perfected art of products
+
+    [ B ]automatic behavior creation
+
+    [ C ]commercial promotions
+
+    [ D ]scientific experiments
+
+35. The author’s attitude toward the influence of advertisement on people’s habits is______.
+
+    [ A ] indifferent  [ B ] negative      [ C ] positive  [ D ] biased
 
                                     Text 4
 
@@ -298,37 +463,64 @@ level. The Taylor decision also declared sex discrimination in jury selection to
 and ordered states to use the same procedures for selecting male and female jurors.
 
 36. From the principles of the US jury system, we learn that ______.
+
     [ A ] both literate and illiterate people can serve on juries
+
     [ B ] defendants are immune from trial by their peers
+
     [ C ] no age limit should be imposed for jury service
+
     [ D ] judgment should consider the opinion of the public
+
 37. The practice of selecting so-called elite jurors prior to 1968 showed______.
+
     [ A ] the inadequacy of antidiscrimination laws
+
     [ B ] the prevalent discrimination against certain races
+
     [ C ] the conflicting ideals in jury selection procedures
+
     [ D ] the arrogance common among the Supreme Court judges
+
 38. Even in the 1960s, women were seldom on the jury list in some states because______.
+
     [ A ] they were automatically banned by state laws
+
     [ B ] they fell far short of the required qualifications
+
     [ C ] they were supposed to perform domestic duties
+
     [ D ] they tended to evade public engagement
+
 39. After the Jury Selection and Service Act was passed, ______.
+
     [ A ] sex discrimination in jury selection was unconstitutional and had to be abolished
+
     [ B ] educational requirements became less rigid in the selection of federal jurors
+
     [ C ] jurors at the state level ought to be representative of the entire community
+
     [ D ] states ought to conform to the federal court in reforming the jury system
+
 40. In discussing the US jury system, the text centers on______.
+
     [ A ] its nature and problems
+
     [ B ] its characteristics and tradition
+
     [ C ] its problems and their solutions
+
     [ D ] its tradition and development
 
 Part B
-Directions:
-    Read the following text and decide whether each of the statements is true or false.
-Choose T if the statement is true or F if the statement is not true. Mark your answers on
-ANSWER   SHEET  1. (10points)
 
+Directions:
+
+    Read the following text and decide whether each of the statements is true or false.
+
+Choose T if the statement is true or F if the statement is not true. Mark your answers on
+
+ANSWER   SHEET  1. (10points)
 
                          Copying Birds May Save Aircraft Fuel
 
@@ -409,16 +601,22 @@ says they are unsubstantiated. “My father was an RAF pilot and my cousin the s
 Lancaster lost over Berlin,” he adds. So he should know.
 
 41. Findings of the Stanford University researchers will promote the sales of new Boeing and
+
    Airbus aircraft.
+
 42. The upwash experience may save propelling energy as well as reducing resistance.
+
 43. Formation flight is more comfortable because passengers can not see the other planes.
+
 44. The role that weather plays in formation flight has not yet been clearly defined.
+
 45. It has been documented that during World War II, America’s armed forces once tried formation
+
    flight to save fuel.
 
-
                          Section  III  Translation
-46.Directions:
+
+46. Directions:
 
     In this section there is a text in English. Translate it into Chinese. Write your translation
 
@@ -447,7 +645,8 @@ and needed the job. Everyone said, ‘Just wait, you’ll turn the corner, give 
                            Section  IV   Writing
 
 Part A
-47.Directions:
+
+47. Directions:
 
     You have just come back from the U.S. as a member of a Sino-American cultural exchange
 
@@ -463,10 +662,9 @@ program .Write a letter to your American colleague to
 
     Do not write your address. (10 points)
 
-
 Part B
 
-48.Directions:
+48. Directions:
 
     In this section, you are asked to write an essay based on the following chart. In your writing,
 
@@ -479,3 +677,4 @@ you should
     You should write at least 150 words.
 
     Write your essay on ANSWER SHEET 2. (15 points)
+
