--- a/md/2013-En.md
+++ b/md/2013-En.md
@@ -27,26 +27,26 @@ computer science is developing to 19 security issues. A further concern is that 
 electronic means of payment leaves an electronic 20 that contains a large amount of personal
 data. There are concerns that government, employers, and marketers might be able to access these
 data, thereby violating our privacy.
-  1．   A. However        B. Moreover      C. Therefore      D. Otherwise
-  2．   A. off            B. back          C. over           D. around
-  3．   A. power          B. concept       C. history        D. role
-  4．   A. reward         B. resist        C. resume         D. reverse
-  5．   A. silent         B. sudden        C. slow           D. steady
-  6．   A. for            B. against       C. with           D. on
-  7．   A. imaginative    B. expensive     C. sensitive      D. productive
-  8．   A. similar        B. original      C. temporary      D. dominant
-  9．   A. collect        B. provide       C. copy           D. print
-  10．  A. give up        B. take over     C. bring back     D. pass down
-  11．  A. before         B. after         C. since          D. when
-  12．  A. kept           B. borrowed      C. released       D. withdrawn
+  1.   A. However        B. Moreover      C. Therefore      D. Otherwise
+  2.   A. off            B. back          C. over           D. around
+  3.   A. power          B. concept       C. history        D. role
+  4.   A. reward         B. resist        C. resume         D. reverse
+  5.   A. silent         B. sudden        C. slow           D. steady
+  6.   A. for            B. against       C. with           D. on
+  7.   A. imaginative    B. expensive     C. sensitive      D. productive
+  8.   A. similar        B. original      C. temporary      D. dominant
+  9.   A. collect        B. provide       C. copy           D. print
+  10.  A. give up        B. take over     C. bring back     D. pass down
+  11.  A. before         B. after         C. since          D. when
+  12.  A. kept           B. borrowed      C. released       D. withdrawn
   13.  A. Unless         B. Until         C. Because        D. Though
-  14．  A. hide           B. express       C. raise          D. ease
-  15．  A. analyzed       B. shared        C.stored          D. displayed
-  16．  A. unsafe         B. unnatural     C.uncommon        D. unclear
-  17．  A. steal          B. choose        C. benefit        D. return
-  18．  A. consideration  B. prevention    C. manipulation   D. justification
-  19．  A. cope with      B. fight against C. adapt to       D. call for
-  20．  A. chunk          B. chip          C. path           D. trail
+  14.  A. hide           B. express       C. raise          D. ease
+  15.  A. analyzed       B. shared        C.stored          D. displayed
+  16.  A. unsafe         B. unnatural     C.uncommon        D. unclear
+  17.  A. steal          B. choose        C. benefit        D. return
+  18.  A. consideration  B. prevention    C. manipulation   D. justification
+  19.  A. cope with      B. fight against C. adapt to       D. call for
+  20.  A. chunk          B. chip          C. path           D. trail
                     Section II    Reading   Comprehension
 Part A
 Directions:
@@ -79,22 +79,22 @@ require workers to have more and better education to make themselves above avera
     In a world where average is officially over, there are many things we need to do to buttress
 employment, but nothing would be more important than passing some kind of G.I. Bill for the 21st
 century that ensures that every American has access to post-high school education.
-21.The joke in Paragraph 1is used to illustrate____.
+21. The joke in Paragraph 1is used to illustrate____.
     A. The impact of technological advances    B.the alleviation of job pressure
     C.the shrinkage of textile mills           D.the decline of middle- class incomes
     3
-22.According to paragraph 3, to be a successful employee, one has to____.
+22. According to paragraph 3, to be a successful employee, one has to____.
     A.adopt an average lifestyle               B.work on cheap software
     C.contribute something unique              D.ask for a moderate salary
-23.The quotation in Paragraph 4 explains that____.
+23. The quotation in Paragraph 4 explains that____.
     A.gains of technology have been erased
     B.job opportunities are disappearing at a high speed
     C.factories are making less money than before
     D.new jobs and services have been offered
-24.According to the author, to reduce unemployment the most important is ____.
+24. According to the author, to reduce unemployment the most important is ____.
     A.to accelerate the I.T. Revolution        B.to ensure more education for people
     C.to advance economic globalization        D.to pass more bills in the 21st century
-25.Which of the following would be the most appropriate title for the text?
+25. Which of the following would be the most appropriate title for the text?
     A.Technology Goes Cheap                    B. New Law Takes Effect
     C. Recession Is Bad                        D. Average Is Over
                                     Text 2
@@ -128,16 +128,16 @@ system.
 26."Birds of passage"refers to those who____.
     [A]find permanent jobs overseas    [B]leave their home countries for good
     [C]immigrate across the Atlantic   [D]stay in a foreign country temporarily
-27.It is implied in Paragraph 2 that the current immigration system in the US____.
+27. It is implied in Paragraph 2 that the current immigration system in the US____.
     [A]needs new immigrant categories  [B]has loosened control over immigrants
     [C]should be adapted to meet challenges [D]has been fixed via political means
-28.According to the author,today's birds of passage want____.
+28. According to the author,today's birds of passage want____.
     [A]financial incentives            [B]a global recognition
     [C]opportunities to get regular jobs [D]the freedom to stay and leave
-29.The author suggests that the birds of passage today should be treated____.
+29. The author suggests that the birds of passage today should be treated____.
     [A]as faithful partners            [B]with legal tolerance
     [C]with economic favors            [D]as mighty rivals
-30.The most appropriate title for this text would be____.
+30. The most appropriate title for this text would be____.
     [A]Come and Go:Big Mistake         [B]Living and Thriving:Great Risk
     [C]Legal or Illegal:Big Mistake    [D]With or Without:Great Risk
                                     Text 3
@@ -172,7 +172,7 @@ historically we have spent about 12 percent of our days contemplating the longer
 technology might change the way we react, it hasn’t changed our nature. We still have the
 6   
 imaginative capacity to rise above temptation and reverse the high-speed trend.
-  31.The time needed in making decisions may _______.
+  31. The time needed in making decisions may _______.
    [A] vary according to the urgency of the situation
    [B] prove the complexity of our brain reaction
    [C] depend on the importance of the assessment
@@ -180,13 +180,13 @@ imaginative capacity to rise above temptation and reverse the high-speed trend.
 32. Our reaction to a fast-food logo shows that snap decisions______.
    [A] can be associative          [B] are not unconscious
    [C] can be dangerous            [D] are not impulsive
-33.To reverse the negative influences of snap decisions ,we should_______.
+33. To reverse the negative influences of snap decisions ,we should_______.
    [A] trust our first impression  [B] do as people usually do
    [C] think before we act         [D] ask for expert advice
 34. John Gottman says that reliable snap reactions are based on _______.
    [A] critical assessment         [B] “thin sliced”study
    [C] sensible explanation        [D] adequate information
-35.The author’s attitude toward reversing the high-speed trend is______.
+35. The author’s attitude toward reversing the high-speed trend is______.
    [A] tolerant      [B] uncertain [C] optimistic      [D] doubtful
                                     Text 4
     Europe is not a gender-equality heaven.In particular, the corporate workplace will never be
@@ -216,19 +216,19 @@ attention precisely because they remain the exception to the rule.
     If appropriate pubic policies were in place to help all women — whether CEOs or their
 children’s caregivers—and all families, Sandberg would be no more newsworthy than any other
 highly capable person living in a more just society.
-36.In the European corporate workplace,generally ____.
+36. In the European corporate workplace,generally ____.
     [A]women take the lead                 [B]men have the final say
     [C]corporate governance is overwhelmed [D]senior management is family-friendly
-37.The European Union's intended legislation is____.
+37. The European Union's intended legislation is____.
     [A]a reflection of gender balance      [B]a reluctant choice
     [C]a response to Reding’s call         [D]a voluntary action
-38.According to Reding, quotas may help woman____.
+38. According to Reding, quotas may help woman____.
     [A]get top business positions          [B]see through the glass ceiling
     [C]balance work and family             [D]anticipate legal results
-39.The author's attitude toward Reding's appeal is one of ____.
+39. The author's attitude toward Reding's appeal is one of ____.
 8   
     [A]skepticism      [B]objectiveness    [C]indifference    [D]approval
-40.Women entering top management become headlines due to the lack of _____.
+40. Women entering top management become headlines due to the lack of _____.
     [A] more social justice                [B] massive media attention
     [C] suitable public policies           [D] great "soft pressure"
 Part  B
@@ -297,7 +297,7 @@ before. I also remember that the musical play Hair opened on Broadway on the sam
 both just pop into my mind in the same way.
                               Section  IV Writing
 Part A
-47.Directions:
+47. Directions:
     Suppose your class is to hold a charity sale for kids in need of help.Write your classmates an
 email to
     1)inform them about the details, and
