--- a/md/2015-En.md
+++ b/md/2015-En.md
@@ -28,26 +28,26 @@ that protect us from what we perceive is going to be more 11 .”
        18  , these commutes were reportedly more enjoyable compared with those sans
   communication, which makes absolute sense, 19  human  beings thrive off of social
   connections. It's that 20 : Talking to strangers can make you feel connected.
-  1．   A. ticket         B. permit        C. signal         D. record
-  2．   A. nothing        B. little        C. another        D. much
-  3．   A. beaten         B. guided        C. plugged        D. brought
-  4．   A. message        B. code          C. notice         D. sign
-  5．   A. under          B. beyond        C. behind         D. from
-  6．   A. misinterpret   B. misapplied    C. misadjusted    D. mismatched
-  7．   A. fired          B. judged        C. replaced       D. delayed
-  8．   A. unreasonable   B. ungrateful    C. unconventional D. unfamiliar
-  9．   A. comfortable    B. anxious       C. confident      D. angry
-  10．  A. attend         B. point         C. take           D. turn
-  11．  A. dangerous      B. mysterious    C. violent        D. boring
-  12．  A. hurt           B. resist        C. bend           D. decay
+  1.   A. ticket         B. permit        C. signal         D. record
+  2.   A. nothing        B. little        C. another        D. much
+  3.   A. beaten         B. guided        C. plugged        D. brought
+  4.   A. message        B. code          C. notice         D. sign
+  5.   A. under          B. beyond        C. behind         D. from
+  6.   A. misinterpret   B. misapplied    C. misadjusted    D. mismatched
+  7.   A. fired          B. judged        C. replaced       D. delayed
+  8.   A. unreasonable   B. ungrateful    C. unconventional D. unfamiliar
+  9.   A. comfortable    B. anxious       C. confident      D. angry
+  10.  A. attend         B. point         C. take           D. turn
+  11.  A. dangerous      B. mysterious    C. violent        D. boring
+  12.  A. hurt           B. resist        C. bend           D. decay
   13.  A. lecture        B. conversation  C. debate         D. negotiation
-  14．  A. trainees       B. employees     C. researchers    D. passengers
-  15．  A. reveal         B. choose        C. predict        D. design
-  16．  A. voyage         B. flight        C. walk           D. ride
-  17．  A. went through   B. did away      C. caught up      D. put up
-  18．  A. In turn        B. In particular C. In fact        D. In consequence
-  19．  A. unless         B. since         C. if             D. whereas
-  20．  A. funny          B. simple        C. logical        D. rare
+  14.  A. trainees       B. employees     C. researchers    D. passengers
+  15.  A. reveal         B. choose        C. predict        D. design
+  16.  A. voyage         B. flight        C. walk           D. ride
+  17.  A. went through   B. did away      C. caught up      D. put up
+  18.  A. In turn        B. In particular C. In fact        D. In consequence
+  19.  A. unless         B. since         C. if             D. whereas
+  20.  A. funny          B. simple        C. logical        D. rare
                    Section  II Reading   Comprehension
 Part A
 Directions：
@@ -83,7 +83,7 @@ complete removal of all electronic devices. Plus, they’re your family. You can
 You never really get to go home from home.
     So it’s not surprising that people are more stressed at home. Not only are the tasks apparently
 infinite, the co-workers are much harder to motivate.
-21.According to Paragraph 1, most previous surveys found that home_____.
+21. According to Paragraph 1, most previous surveys found that home_____.
     [A] offered greater relaxation than the workplace
     [B] was an ideal place for stress measurement
     [C] generated more stress than the workplace
@@ -91,14 +91,14 @@ infinite, the co-workers are much harder to motivate.
 22. According to Damaske, who are likely to be the happiest at home?
     [A] Childless wives                [B] Working mothers
     [C] Childless husbands             [D] Working fathers
-23.The blurring of working women's roles refers to the fact that_____.
+23. The blurring of working women's roles refers to the fact that_____.
     [A] it is difficult for them to leave their office
     [B] their home is also a place for kicking back
     [C] there is often much housework left behind
     [D] they are both bread winners and housewives
-24.The word “moola”(Line4,Para4)most probably means_____.
+24. The word “moola”(Line4,Para4)most probably means_____.
     [A] skills         [B] energy      [C] earnings        [D] nutrition
-25.The home front differs from the workplace in that_____.
+25. The home front differs from the workplace in that_____.
     [A] division of labor at home is seldom clear-cut
     [B] home is hardly a cozier working environment
     [C] household tasks are generally more motivating
@@ -188,13 +188,13 @@ you relate to your work—and how your work defines who you are.
     [A] more emotional [B] more objective  [C] less energetic [D] less strategic
 32. “Team”-oriented corporate vocabulary is closely related to_____.
     [A] historical incidents [B] gender difference [C] sports culture [D] athletic executives
-33.Khurana believes that the importation of terminology aims to_____.
+33. Khurana believes that the importation of terminology aims to_____.
     [A] revive historical terms            [B] promote company image
     [C] foster corporate cooperation       [D] strengthen employee loyalty
-34.It can be inferred that Lean In_____.
+34. It can be inferred that Lean In_____.
     [A] voices for working women           [B] appeals to passionate workaholics
     [C] triggers debates among mommies     [D] praises motivated employees
-35.Which of the following statements is true about office speak?
+35. Which of the following statements is true about office speak?
     [A] Managers admire it but avoid it    [B] Linguists believe it to be nonsense
     [C] Companies find it to be fundamental [D] Regular people mock it but accept it
                                     Text 4
